<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"

    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.eider.saripaar.MainActivity">

    <TextView
        android:text="@string/instituto_tecnologico_de_los_mochis"
        android:textColor="@color/Nephritis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_marginBottom="30dp"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/etCorreo"
        android:gravity="center_horizontal"
        android:hint="@string/introduce_tu_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/introduce_una_contrase_a"
        android:id="@+id/etContraseña"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btnEnviar"
            android:layout_gravity="left"
            android:text="@string/enviar"
            android:layout_marginRight="10dp"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:onClick="Loggin"
            tools:ignore="ButtonStyle,RtlHardcoded" />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_gravity="right"
            android:layout_marginLeft="10dp"
            android:text="@string/cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="accionCancelar"
            tools:ignore="ButtonStyle,RtlHardcoded" />
    </LinearLayout>
</LinearLayout>
